--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "gsap": "^3.13.0",
     "mongodb": "^5.9.2",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
