--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "gsap": "^3.13.0",
     "mongodb": "^5.9.2",
+    "mongoose": "^8.14.2",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-calendar": "^5.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
